[gd_scene load_steps=6 format=3 uid="uid://dx33ov0j5tsn6"]

[ext_resource type="Script" uid="uid://dmndqovpmf01j" path="res://scenes/scene_update/scene_update.gd" id="1_01ka8"]
[ext_resource type="Texture2D" uid="uid://m6vsv80ejymo" path="res://scenes/scene_update/assets/basic_hurt.png" id="1_ihcs4"]
[ext_resource type="Texture2D" uid="uid://qg5byw57fmow" path="res://drop_item/assets/gold/gold.png" id="2_01ka8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bb8vt"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hekwk"]
content_margin_left = 10.0
bg_color = Color(0.120418, 0.120418, 0.120418, 1)

[node name="scene_update" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_01ka8")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.337255)

[node name="attr_item_chose" type="GridContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 52.0
offset_top = -140.0
offset_right = 1400.0
offset_bottom = 154.0
grow_vertical = 2
theme_override_constants/h_separation = 20
columns = 4

[node name="attr_item_template" type="Panel" parent="attr_item_chose"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="attr_item_chose/attr_item_template"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -70.0
offset_right = -19.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "选择"

[node name="MarginContainer" type="MarginContainer" parent="attr_item_chose/attr_item_template"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 127.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="attr_item_chose/attr_item_template/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="attr_item_chose/attr_item_template/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_ihcs4")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="attr_item_chose/attr_item_template/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="attr_item_chose/attr_item_template/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "攻击力"

[node name="Label2" type="Label" parent="attr_item_chose/attr_item_template/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.901961, 0.992157, 0, 1)
theme_override_font_sizes/font_size = 25
text = "升级"

[node name="RichTextLabel" type="RichTextLabel" parent="attr_item_chose/attr_item_template"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 18.0
offset_top = 9.0
offset_right = -20.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[color=green]+3[/color] 基础伤害"
fit_content = true

[node name="update" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.5
offset_top = 227.0
offset_right = 68.5
offset_bottom = 291.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "升级！"

[node name="refresh" type="Button" parent="."]
offset_left = 676.0
offset_top = 760.0
offset_right = 835.0
offset_bottom = 812.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_bb8vt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hekwk")
theme_override_styles/normal = SubResource("StyleBoxFlat_hekwk")
text = "刷新 -2"
alignment = 0

[node name="TextureRect" type="TextureRect" parent="refresh"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -42.0
offset_right = 22.0
offset_bottom = 42.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_01ka8")

[node name="attr" type="Panel" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -483.0
offset_top = -420.0
offset_right = -42.0
offset_bottom = 421.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="attr"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="attr/MarginContainer"]
layout_mode = 2

[node name="attr_list" type="VBoxContainer" parent="attr/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="attr_template" type="HBoxContainer" parent="attr/MarginContainer/ScrollContainer/attr_list"]
layout_mode = 2

[node name="name" type="Label" parent="attr/MarginContainer/ScrollContainer/attr_list/attr_template"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "最大血量"

[node name="value" type="Label" parent="attr/MarginContainer/ScrollContainer/attr_list/attr_template"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 25
text = "100"

[node name="Label" type="Label" parent="attr"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 94.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "属性"
horizontal_alignment = 1
vertical_alignment = 1

[node name="continue" type="Button" parent="."]
offset_left = 1580.0
offset_top = 976.0
offset_right = 1741.0
offset_bottom = 1060.0
theme_override_font_sizes/font_size = 30
text = "继续"

[connection signal="pressed" from="refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
